--- a/package.json
+++ b/package.json
@@ -22,7 +22,16 @@
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "compression": "^1.6.2",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "immutable": "4.0.0-rc.2",
+    "isomorphic-fetch": "^2.2.1",
+    "react": "^15.5.3",
+    "react-dom": "^15.5.3",
+    "react-hot-loader": "next",
+    "react-redux": "^5.0.3",
+    "redux": "^3.6.0",
+    "redux-actions": "^2.0.1",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -30,8 +39,10 @@
     "babel-eslint": "^7.2.1",
     "babel-jest": "^19.0.0",
     "babel-loader": "^6.4.1",
+    "babel-plugin-flow-react-proptypes": "^1.0.0",
     "babel-preset-env": "^1.3.3",
     "babel-preset-flow": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
     "cross-env": "^4.0.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
@@ -40,11 +51,13 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2 || ^4.0.0",
     "eslint-plugin-react": "^6.9.0",
+    "fetch-mock": "^5.9.4",
     "flow-bin": "^0.43.1",
     "husky": "^0.13.3",
     "jest": "^19.0.2",
     "nodemon": "^1.11.0",
     "pm2": "^2.4.4",
+    "redux-mock-store": "^1.2.2",
     "rimraf": "^2.6.1",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
